Fixed spelling mistake
Fixed a little spelling mistake, rookie error.

Signed-off-by: Ash Smith <ash@ashsmith.co>

--- a/README
+++ b/README
@@ -8,4 +8,4 @@ I'm open for suggestions for improvements where possible.
 
 Features:
 * HTML5 / CSS3 features (minimal on CSS3)
-* Responsive - From 320 up to 1200px (I'm using em based media queries but these are the equivilant in pixels)
+* Responsive - From 320 up to 1200px (I'm using em based media queries but these are the equivalent in pixels)
